--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -12,6 +12,15 @@ html {
 main {
   background-color: #fff;
   width: 40vw; }
+  @media only screen and (max-width: 1200px) {
+    main {
+      width: 60vw; } }
+  @media only screen and (max-width: 900px) {
+    main {
+      width: 80vw; } }
+  @media only screen and (max-width: 600px) {
+    main {
+      width: 100vw; } }
 
 body {
   display: flex;
@@ -20,12 +29,14 @@ body {
   height: 100vh;
   background-color: #f5f5f5;
   justify-content: space-around; }
+  @media only screen and (max-width: 900px) {
+    body {
+      flex-direction: column;
+      font-size: 2rem;
+      gap: 3rem; } }
 
 ul {
   list-style: none; }
-
-.section__container {
-  height: 60vh; }
 
 .todo__actions li {
   padding-bottom: 1rem;
@@ -74,7 +85,14 @@ ul {
   border-radius: 0.5rem; }
 
 label {
-  font-size: 1.7rem; }
+  display: inline-block;
+  font-size: 1.7rem;
+  margin-bottom: 1.5rem; }
+
+form {
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 0.5rem; }
 
 .btn-submit {
   padding: 1rem 2rem;
@@ -93,6 +111,12 @@ label {
 
 svg:hover {
   cursor: pointer; }
+
+form .btn {
+  text-align: center; }
+
+aside {
+  font-family: 'Work Sans', sans-serif; }
 
 .todo__task {
   display: flex;
