--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -100,6 +100,10 @@ ul {
         padding: 1rem;
         padding-top: 2.5rem;
         box-shadow: 0px 0px 9px -3px rgba(0, 0, 10, 10%);
+        @media only screen and (max-width: 500px) {
+            width: 90%;
+            margin-left: 5%;
+        }
     }
     &__actions {
         font-family: 'Inter', sans-serif;
@@ -111,6 +115,9 @@ ul {
         padding: 1.5rem 2rem 0 2rem;
         border-radius: 0.5rem;
         // margin: 0 1rem 0 0;
+        @media only screen and (max-width: 500px) {
+            font-size: 1.4rem;
+        }
     }
 }
 
