--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -26,7 +26,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #f5f5f5;
   justify-content: space-around; }
   @media only screen and (max-width: 900px) {
@@ -44,7 +43,7 @@ ul {
 
 .todo__img {
   width: 100%;
-  height: 40vh; }
+  height: 30vh; }
 
 .todo__links {
   color: #fff;
@@ -65,7 +64,7 @@ ul {
         font-size: 3.5rem;
         position: absolute;
         left: 10%;
-        bottom: 27%; } }
+        bottom: 35%; } }
     .todo__hero h1 span {
       display: block; }
 
@@ -127,6 +126,9 @@ form {
 svg:hover {
   cursor: pointer; }
 
+svg {
+  vertical-align: bottom; }
+
 form .btn {
   text-align: center; }
 
@@ -173,6 +175,10 @@ aside {
   position: absolute;
   left: 2.5%;
   top: 26%; }
+  @media only screen and (max-width: 500px) {
+    .todo__completed {
+      left: 1.9%;
+      top: 29%; } }
 
 .todo__actions .todo__action {
   border-bottom-color: #399498; }
