--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -46,7 +46,7 @@ main {
 
 body {
     @include flex-rule();
-    height: 100vh;
+    // height: 100vh;
     background-color: #f5f5f5;
     justify-content: space-around;
     @media only screen and (max-width: 900px) {
@@ -70,7 +70,7 @@ ul {
 .todo {
     &__img {
         width: 100%;
-        height: 40vh;
+        height: 30vh;
     }
     &__links {
         color: $color-secondary;
@@ -91,7 +91,7 @@ ul {
                 font-size: 3.5rem;
                 position: absolute;
                 left: 10%;
-                bottom: 27%;
+                bottom: 35%;
             }
             span {
                 display: block;
@@ -163,6 +163,10 @@ svg:hover {
     cursor: pointer;
 }
 
+svg {
+    vertical-align: bottom;
+}
+
 form .btn {
     text-align: center;
 }
@@ -218,6 +222,10 @@ aside {
     position: absolute;
     left: 2.5%;
     top: 26%;
+    @media only screen and (max-width: 500px) {
+        left: 1.9%;
+        top: 29%;
+    }
 }
 
 .todo__actions .todo__action {
