--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -104,6 +104,7 @@ label {
   margin-bottom: 1.5rem; }
 
 form {
+  width: 38rem;
   background-color: #fff;
   padding: 2rem;
   border-radius: 0.5rem; }
@@ -134,6 +135,9 @@ form .btn {
 
 aside {
   font-family: 'Work Sans', sans-serif; }
+
+textarea {
+  width: 100%; }
 
 .todo__task {
   display: flex;
@@ -178,7 +182,7 @@ aside {
   @media only screen and (max-width: 500px) {
     .todo__completed {
       left: 1.9%;
-      top: 29%; } }
+      top: 28%; } }
 
 .todo__actions .todo__action {
   border-bottom-color: #399498; }
