--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -136,6 +136,7 @@ label {
 }
 
 form {
+    width: 38rem;
     background-color: #fff;
     padding: 2rem;
     border-radius: 0.5rem;
@@ -173,6 +174,10 @@ form .btn {
 
 aside {
     font-family: 'Work Sans', sans-serif;
+}
+
+textarea {
+    width: 100%;
 }
 
 //Task Styling
@@ -224,7 +229,7 @@ aside {
     top: 26%;
     @media only screen and (max-width: 500px) {
         left: 1.9%;
-        top: 29%;
+        top: 28%;
     }
 }
 
